# django-lazycrud

./: .gitignore  README.rst  deploy.sh  pypi_upload.sh  pyproject.toml  setup.py
.circleci/: config.yml
django_lazycrud.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lazycrud/: forms.py
lazycrud/static/lazycrud/js/: object_form.js  object_list.js
lazycrud/templates/lazycrud/: object_form.html  object_form_with_related_formset.html
scripts/: install.sh
