[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lazycrud"
version = "1.9.0"
authors = [
    {name = "Augusto Destrero", email = "a.destrero@gmail.com"},
]
description = "A little Django app to reduce boilerplate code at a minimum when you write class based views in a typical CRUD scenario."
readme = "README.rst"
license = {text = "MIT"}
keywords = ["django", "crud"]
requires-python = ">=3.8"
dependencies = [
    "django-crispy-forms>=1.6.1",
]

[project.urls]
Homepage = "https://github.com/baxeico/django-lazycrud"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
lazycrud = [
    "templates/**/*",
    "static/**/*",
    "locale/**/*",
]

